@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+<schema name="schema-minimal-with-another-uniqkey" version="1.1">
+  <fieldType name="string" class="solr.StrField"/>
+  <uniqueKey>notid</uniqueKey>
+  <field name="notid" type="string" indexed="true" stored="true" docValues="false" multiValued="false" required="true"/>
+  <dynamicField name="*" type="string" indexed="true" stored="true"/>
+</schema>
