@@ -120,20 +120,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|SolrTestCaseJ4
-operator|.
-name|SuppressSSL
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|client
 operator|.
 name|solrj
@@ -341,8 +327,6 @@ import|;
 end_import
 
 begin_class
-annotation|@
-name|SuppressSSL
 DECL|class|TestSubQueryTransformerDistrib
 specifier|public
 class|class
@@ -350,6 +334,24 @@ name|TestSubQueryTransformerDistrib
 extends|extends
 name|SolrCloudTestCase
 block|{
+DECL|field|support
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|support
+init|=
+literal|"These guys help customers"
+decl_stmt|;
+DECL|field|engineering
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|engineering
+init|=
+literal|"These guys develop stuff"
+decl_stmt|;
 DECL|field|people
 specifier|final
 specifier|static
@@ -366,6 +368,12 @@ name|depts
 init|=
 literal|"departments"
 decl_stmt|;
+DECL|field|differentUniqueId
+specifier|private
+specifier|static
+name|boolean
+name|differentUniqueId
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|setupCluster
@@ -377,6 +385,14 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|differentUniqueId
+operator|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+expr_stmt|;
 specifier|final
 name|Path
 name|configDir
@@ -518,6 +534,10 @@ name|withProperty
 argument_list|(
 literal|"schema"
 argument_list|,
+name|differentUniqueId
+condition|?
+literal|"schema-minimal-with-another-uniqkey.xml"
+else|:
 literal|"schema-docValuesJoin.xml"
 argument_list|)
 operator|.
@@ -702,6 +722,14 @@ block|,
 literal|"depts.fl"
 block|,
 literal|"text_t"
+operator|+
+operator|(
+name|differentUniqueId
+condition|?
+literal|",id:notid"
+else|:
+literal|""
+operator|)
 block|,
 literal|"depts.indent"
 block|,
@@ -710,6 +738,14 @@ block|,
 literal|"depts.collection"
 block|,
 literal|"departments"
+block|,
+name|differentUniqueId
+condition|?
+literal|"depts.distrib.singlePass"
+else|:
+literal|"notnecessary"
+block|,
+literal|"true"
 block|,
 literal|"depts.rows"
 block|,
@@ -724,6 +760,32 @@ block|,
 literal|"depts.logParamsList"
 block|,
 literal|"q,fl,rows,row.dept_ss_dv"
+block|,
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|"depts.wt"
+else|:
+literal|"whatever"
+block|,
+name|anyWt
+argument_list|()
+block|,
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|"wt"
+else|:
+literal|"whatever"
+block|,
+name|anyWt
+argument_list|()
 block|}
 argument_list|)
 argument_list|)
@@ -772,69 +834,13 @@ name|getNumFound
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|engText
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-argument_list|()
-block|{
-block|{
-name|put
-argument_list|(
-literal|"text_t"
-argument_list|,
-literal|"These guys develop stuff"
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-decl_stmt|;
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|suppText
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-argument_list|()
-block|{
-block|{
-name|put
-argument_list|(
-literal|"text_t"
-argument_list|,
-literal|"These guys help customers"
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-decl_stmt|;
 name|int
-name|engineer
+name|engineerCount
 init|=
 literal|0
 decl_stmt|;
 name|int
-name|support
+name|supportCount
 init|=
 literal|0
 decl_stmt|;
@@ -942,42 +948,55 @@ argument_list|(
 name|deptN
 argument_list|)
 decl_stmt|;
+name|String
+name|actual
+init|=
+operator|(
+name|String
+operator|)
+name|deptDoc
+operator|.
+name|get
+argument_list|(
+literal|"text_t"
+argument_list|)
+decl_stmt|;
 name|assertTrue
 argument_list|(
 name|deptDoc
 operator|+
 literal|"should be either "
 operator|+
-name|engText
+name|engineering
 operator|+
 literal|" or "
 operator|+
-name|suppText
+name|support
 argument_list|,
 operator|(
-name|engText
+name|engineering
 operator|.
 name|equals
 argument_list|(
-name|deptDoc
+name|actual
 argument_list|)
 operator|&&
 operator|++
-name|engineer
+name|engineerCount
 operator|>
 literal|0
 operator|)
 operator|||
 operator|(
-name|suppText
+name|support
 operator|.
 name|equals
 argument_list|(
-name|deptDoc
+name|actual
 argument_list|)
 operator|&&
 operator|++
-name|support
+name|supportCount
 operator|>
 literal|0
 operator|)
@@ -992,12 +1011,48 @@ operator|.
 name|toString
 argument_list|()
 argument_list|,
-name|engineer
+name|engineerCount
 argument_list|,
-name|support
+name|supportCount
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|anyWt
+specifier|private
+name|String
+name|anyWt
+parameter_list|()
+block|{
+name|String
+index|[]
+name|wts
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"javabin"
+block|,
+literal|"xml"
+block|,
+literal|"json"
+block|}
+decl_stmt|;
+return|return
+name|wts
+index|[
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+name|wts
+operator|.
+name|length
+argument_list|)
+index|]
+return|;
 block|}
 DECL|method|createIndex
 specifier|private
@@ -1269,6 +1324,15 @@ name|ArrayList
 argument_list|<>
 argument_list|()
 decl_stmt|;
+name|String
+name|deptIdField
+init|=
+name|differentUniqueId
+condition|?
+literal|"notid"
+else|:
+literal|"id"
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1292,7 +1356,7 @@ name|add
 argument_list|(
 name|doc
 argument_list|(
-literal|"id"
+name|deptIdField
 argument_list|,
 literal|""
 operator|+
@@ -1305,7 +1369,7 @@ literal|"Engineering"
 argument_list|,
 literal|"text_t"
 argument_list|,
-literal|"These guys develop stuff"
+name|engineering
 argument_list|,
 literal|"salary_i_dv"
 argument_list|,
@@ -1326,7 +1390,7 @@ name|add
 argument_list|(
 name|doc
 argument_list|(
-literal|"id"
+name|deptIdField
 argument_list|,
 literal|""
 operator|+
@@ -1360,7 +1424,7 @@ name|add
 argument_list|(
 name|doc
 argument_list|(
-literal|"id"
+name|deptIdField
 argument_list|,
 literal|""
 operator|+
@@ -1394,7 +1458,7 @@ name|add
 argument_list|(
 name|doc
 argument_list|(
-literal|"id"
+name|deptIdField
 argument_list|,
 literal|""
 operator|+
@@ -1407,7 +1471,7 @@ literal|"Support"
 argument_list|,
 literal|"text_t"
 argument_list|,
-literal|"These guys help customers"
+name|support
 argument_list|,
 literal|"salary_i_dv"
 argument_list|,
